# bearden

./: .gitignore  README.md  app.py  config.toml  gunicorn.conf.py  pyproject.toml  server.py  wsgi.py
.github/workflows/: ci.yml
templates/: index.html
