[project]
name = "bearden"
version = "0.1.0"
description = "Simple home server dashboard with redirect cards"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "gunicorn>=23.0",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["bearden"]
